# PromptEngineering

./: .cursorignore  .gitignore  LICENSE  Makefile  README.md  app.py  cache_manager.py  callbacks.py  config.yml  config_template.yml  layout.py  main.py  pyproject.toml
.cache/: cache.db  cache.db-shm  cache.db-wal
assets/: custom.css
scratch/: openai_token.txt  replicate_token.txt
src/: Chat.py  Level.py  Logger.py
src/callbacks/: chat_management.py  level_management.py  ui_updates.py  user_control.py  user_input.py  user_management.py
src/levels/: Chatterbox.py  Family.py  Fibonacci.py  LevelList.py  MarkdownFormatting.py  PrecisionPerformer.py  XMLEngineering.py  YesNo.py  level_1.py  level_2.py  level_3.py  level_4.py  level_5.py
src/utils/: callback_utils.py
tests/: results.md  test_chat_performance.py
