[tool.poetry]
name = "promptengineering"
version = "0.1.0"
description = "A web server enabling a class to experiment with prompt emgineering using small open-source models."
authors = ["Henri Jamet <henri.jamet@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.17.1"
ollama = "^0.3.2"
dash-mantine-components = "^0.14.4"
dash-iconify = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
