[tool.poetry]
name = "promptengineering"
version = "0.1.0"
description = "A web server enabling a class to experiment with prompt emgineering using small open-source models."
authors = ["Henri Jamet <henri.jamet@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = {extras = ["diskcache"], version = "^2.17.1"}
ollama = "^0.3.2"
dash-mantine-components = "^0.14.4"
dash-iconify = "^0.1.2"
dash-extensions = "^1.0.18"
redis = "^5.0.8"
celery = "^5.4.0"
diskcache = "^5.6.3"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
